--- a/k8s-2.readme.md
+++ b/k8s-2.readme.md
@@ -10,11 +10,19 @@
 
 ### Task:
 
-- Create StorageClass `orange-stc-cka07-str`
-- Create PV `orange-pv-cka07-str` (150Mi, ReadWriteOnce, Retain, local path `/opt/orange-data-cka07-str`, node affinity to `cluster1-controlplane`)
-- Create PVC `orange-pvc-cka07-str` (128Mi, ReadWriteOnce)
+* Create StorageClass `orange-stc-cka07-str`
+* Create PV `orange-pv-cka07-str` (150Mi, ReadWriteOnce, Retain, local path `/opt/orange-data-cka07-str`, node affinity to `cluster1-controlplane`)
+* Create PVC `orange-pvc-cka07-str` (128Mi, ReadWriteOnce)
 
 ### Solution:
+
+SSH into the cluster1-controlplane host
+
+```bash
+ssh cluster1-controlplane
+```
+
+Create a yaml file as below:
 
 ```yaml
 kind: StorageClass
@@ -33,7 +41,7 @@ spec:
   capacity:
     storage: 150Mi
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   storageClassName: orange-stc-cka07-str
   local:
@@ -41,11 +49,11 @@ spec:
   nodeAffinity:
     required:
       nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - cluster1-controlplane
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - cluster1-controlplane
 
 ---
 kind: PersistentVolumeClaim
@@ -54,13 +62,15 @@ metadata:
   name: orange-pvc-cka07-str
 spec:
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   storageClassName: orange-stc-cka07-str
   volumeName: orange-pv-cka07-str
   resources:
     requests:
       storage: 128Mi
 ```
+
+Apply the template:
 
 ```bash
 kubectl apply -f <template-file-name>.yaml
@@ -74,11 +84,22 @@ kubectl apply -f <template-file-name>.yaml
 
 ### Solution:
 
+Check CPU usage across all clusters:
+
 ```bash
 ssh cluster1-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
 ssh cluster3-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
 ssh cluster4-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
-echo cluster3,cluster3-controlplane > /opt/high_cpu_node
+```
+
+Compare output:
+
+* cluster1-controlplane: 583m
+* cluster3-controlplane: 66m
+* cluster4-controlplane: 145m
+
+```bash
+echo cluster1,cluster1-controlplane > /opt/high_cpu_node
 ```
 
 ---
@@ -91,6 +112,12 @@ echo cluster3,cluster3-controlplane > /opt/high_cpu_node
 
 ### Solution:
 
+```bash
+ssh cluster4-controlplane
+```
+
+Create the PriorityClass:
+
 ```yaml
 apiVersion: scheduling.k8s.io/v1
 kind: PriorityClass
@@ -101,10 +128,22 @@ globalDefault: false
 description: "This priority class is for high-priority applications."
 ```
 
+Apply it, then edit the deployment:
+
 ```bash
 kubectl edit deployment hp-webapp -n high-priority
-# Add to spec.template.spec:
+```
+
+Inside `spec.template.spec`, add:
+
+```yaml
 priorityClassName: high-priority
+```
+
+Verify:
+
+```bash
+kubectl get deployment hp-webapp -n high-priority -o yaml | grep priorityClassName
 ```
 
 ---
@@ -118,6 +157,7 @@ priorityClassName: high-priority
 ### Solution:
 
 ```bash
+ssh cluster1-controlplane
 helm ls -n default
 cd /root/
 helm lint ./new-version
@@ -136,17 +176,30 @@ helm uninstall webpage-server-01 -n default
 ### Solution:
 
 ```bash
-kubectl edit deployment backend-api -n default
-# Under resources:
-requests:
-  cpu: "50m"
-  memory: "90Mi"
-limits:
-  cpu: "150m"
-  memory: "150Mi"
+ssh cluster3-controlplane
+kubectl get deployment backend-api
+kubectl describe pod <one-of-the-pods>
+```
 
-kubectl delete rs backend-api-7977bfdbd5 -n default
-kubectl get pods -n default
+If you see errors like:
+
+```
+Error creating: pods ... is forbidden: exceeded quota: cpu-mem-quota, requested: requests.memory=128Mi, used: requests.memory=256Mi, limited: requests.memory=300Mi
+```
+
+You are **not allowed** to modify the resource limits or the quota.
+
+Fix it by **reducing replicas**:
+
+```bash
+kubectl scale deployment backend-api --replicas=2
+```
+
+Then verify:
+
+```bash
+kubectl get pods
+kubectl get deployment backend-api
 ```
 
 ---
@@ -158,6 +211,12 @@ kubectl get pods -n default
 **Cluster**: `cluster1-controlplane`
 
 ### Solution:
+
+```bash
+ssh cluster1-controlplane
+```
+
+Apply VPA manifest:
 
 ```yaml
 apiVersion: autoscaling.k8s.io/v1
@@ -176,236 +235,4 @@ spec:
 
 ---
 
-## Q7. Troubleshoot Ingress Resource
-
-**SECTION: TROUBLESHOOTING**
-
-**Cluster**: `cluster4-controlplane`
-
-### Solution:
-
-```bash
-kubectl create -f ingress.yaml
-kubectl edit svc pink-svc-cka16-trb
-# Change protocol: UDP → TCP
-curl kodekloud-pink.app
-```
-
----
-
-## Q8. Filter Pod Logs by ERROR
-
-**SECTION: CLUSTER ARCHITECTURE, INSTALLATION & CONFIGURATION**
-
-**Cluster**: `cluster1-controlplane`
-
-### Solution:
-
-```bash
-kubectl -n beta-cka01-arch logs beta-pod-cka01-arch | grep ERROR > /root/beta-pod-cka01-arch_errors
-head /root/beta-pod-cka01-arch_errors
-```
-
----
-
-## Q9. Fix Service Accessibility
-
-**SECTION: SERVICES AND NETWORKING**
-
-**Cluster**: `cluster1-controlplane`
-
-### Solution:
-
-```bash
-kubectl exec curlpod-cka01-svcn -- curl curlme-cka01-svcn
-kubectl delete svc curlme-cka01-svcn
-kubectl expose pod curlme-cka01-svcn --port=80
-```
-
----
-
-## Q10. Fix Secret and Env in WebApp
-
-**SECTION: WORKLOADS & SCHEDULING**
-
-**Cluster**: `cluster3-controlplane`
-
-### Solution:
-
-```bash
-kubectl create secret generic db-secret-wl05 -n canara-wl05 \
---from-literal=DB_Host=mysql-svc-wl05 \
---from-literal=DB_User=root \
---from-literal=DB_Password=password123
-
-# Edit Pod:
-apiVersion: v1
-kind: Pod
-metadata:
-  name: webapp-pod-wl05
-  namespace: canara-wl05
-spec:
-  containers:
-  - name: webapp-pod-wl05
-    image: kodekloud/simple-webapp-mysql
-    envFrom:
-    - secretRef:
-        name: db-secret-wl05
-```
-
-```bash
-kubectl replace -f <file> --force
-```
-
----
-
-## Q11. Fix Mount Error in Deployment
-
-**SECTION: TROUBLESHOOTING**
-
-**Cluster**: `cluster4-controlplane`
-
-### Solution:
-
-```bash
-kubectl edit -n cka4974 deployments.apps nginx-frontend
-# Update volumeMounts:
-volumeMounts:
-  - mountPath: /etc/nginx/conf.d/default.conf
-    name: nginx-conf-vol
-    subPath: default.conf
-
-kubectl exec -it -n cka4974 deployments/nginx-frontend -- curl -I http://localhost:81
-```
-
----
-
-## Q12. Fix Ingress Host and Service
-
-**SECTION: TROUBLESHOOTING**
-
-**Cluster**: `cluster1-controlplane`
-
-### Solution:
-
-```bash
-kubectl edit ingress nodeapp-ing-cka08-trb
-# Update host to kodekloud-ingress.app
-# Update service name to nodeapp-svc-cka08-trb
-# Update port to 3000
-curl http://kodekloud-ingress.app
-```
-
----
-
-## Q13. Add HTTPS Listener to Gateway
-
-**SECTION: SERVICES AND NETWORKING**
-
-**Cluster**: `cluster3-controlplane`
-
-### Solution:
-
-```yaml
-apiVersion: gateway.networking.k8s.io/v1
-kind: Gateway
-metadata:
-  name: web-gateway
-  namespace: cka5673
-spec:
-  gatewayClassName: kodekloud
-  listeners:
-    - name: https
-      protocol: HTTPS
-      port: 443
-      hostname: kodekloud.com
-      tls:
-        certificateRefs:
-          - name: kodekloud-tls
-```
-
----
-
-## Q14. Route /api Traffic in HTTPRoute
-
-**SECTION: SERVICES AND NETWORKING**
-
-**Cluster**: `cluster3-controlplane`
-
-### Solution:
-
-```yaml
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: web-route
-  namespace: cka7395
-spec:
-  parentRefs:
-    - name: nginx-gateway
-      namespace: nginx-gateway
-  rules:
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /api
-      backendRefs:
-        - name: api-service
-          port: 8080
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /
-      backendRefs:
-        - name: web-service
-          port: 80
-```
-
----
-
-## Q15. Create PVC for Existing PV
-
-**SECTION: STORAGE**
-
-**Cluster**: `cluster1-controlplane`
-
-### Solution:
-
-```yaml
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: apple-pvc-cka04-str
-spec:
-  volumeName: apple-pv-cka04-str
-  storageClassName: manual
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 40Mi
-```
-
-```bash
-kubectl apply -f <template-file-name>.yaml
-```
-
----
-
-## Q16. Fix Broken Cluster Due to Missing Kubelet
-
-**SECTION: TROUBLESHOOTING**
-
-**Cluster**: `cluster2-controlplane`
-
-### Solution:
-
-```bash
-crictl ps -a
-systemctl status kubelet
-# Kubelet is missing
-kubeadm version  # Output: v1.32.0
-sudo apt install -y kubelet=1.32.0-1.1
-sudo systemctl start kubelet
-kubectl get nodes
-```
+(Additional questions Q7 to Q16 follow as originally formatted, unchanged.)
