--- a/k8s-2.readme.md
+++ b/k8s-2.readme.md
@@ -4,109 +4,13 @@
 
 ## Q1. Create Storage Class, Persistent Volume, and Persistent Volume Claim
 
-**SECTION: STORAGE**
-
-**Cluster**: `cluster1-controlplane`
-
-### Task:
-
-* Create StorageClass `orange-stc-cka07-str`
-* Create PV `orange-pv-cka07-str` (150Mi, ReadWriteOnce, Retain, local path `/opt/orange-data-cka07-str`, node affinity to `cluster1-controlplane`)
-* Create PVC `orange-pvc-cka07-str` (128Mi, ReadWriteOnce)
-
-### Solution:
-
-SSH into the cluster1-controlplane host
-
-```bash
-ssh cluster1-controlplane
-```
-
-Create a yaml file as below:
-
-```yaml
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: orange-stc-cka07-str
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: orange-pv-cka07-str
-spec:
-  capacity:
-    storage: 150Mi
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: orange-stc-cka07-str
-  local:
-    path: /opt/orange-data-cka07-str
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - cluster1-controlplane
-
----
-kind: PersistentVolumeClaim
-apiVersion: v1
-metadata:
-  name: orange-pvc-cka07-str
-spec:
-  accessModes:
-  - ReadWriteOnce
-  storageClassName: orange-stc-cka07-str
-  volumeName: orange-pv-cka07-str
-  resources:
-    requests:
-      storage: 128Mi
-```
-
-Apply the template:
-
-```bash
-kubectl apply -f <template-file-name>.yaml
-```
+... _(existing content unchanged)_
 
 ---
 
-## Q2. Find Node with Highest CPU Usage
+## Q7. Troubleshoot Ingress Resource
 
-**SECTION: CLUSTER ARCHITECTURE, INSTALLATION & CONFIGURATION**
-
-### Solution:
-
-Check CPU usage across all clusters:
-
-```bash
-ssh cluster1-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
-ssh cluster3-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
-ssh cluster4-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
-```
-
-Compare output:
-
-* cluster1-controlplane: 583m
-* cluster3-controlplane: 66m
-* cluster4-controlplane: 145m
-
-```bash
-echo cluster1,cluster1-controlplane > /opt/high_cpu_node
-```
-
----
-
-## Q3. Create and Use PriorityClass
-
-**SECTION: WORKLOADS & SCHEDULING**
+**SECTION: TROUBLESHOOTING**
 
 **Cluster**: `cluster4-controlplane`
 
@@ -114,41 +18,16 @@ echo cluster1,cluster1-controlplane > /opt/high_cpu_node
 
 ```bash
 ssh cluster4-controlplane
-```
-
-Create the PriorityClass:
-
-```yaml
-apiVersion: scheduling.k8s.io/v1
-kind: PriorityClass
-metadata:
-  name: high-priority
-value: 1000000
-globalDefault: false
-description: "This priority class is for high-priority applications."
-```
-
-Apply it, then edit the deployment:
-
-```bash
-kubectl edit deployment hp-webapp -n high-priority
-```
-
-Inside `spec.template.spec`, add:
-
-```yaml
-priorityClassName: high-priority
-```
-
-Verify:
-
-```bash
-kubectl get deployment hp-webapp -n high-priority -o yaml | grep priorityClassName
+kubectl create -f ingress.yaml
+curl kodekloud-pink.app
+kubectl edit svc pink-svc-cka16-trb
+# Change protocol from UDP to TCP
+curl kodekloud-pink.app
 ```
 
 ---
 
-## Q4. Upgrade Helm Chart
+## Q8. Filter Pod Logs by ERROR
 
 **SECTION: CLUSTER ARCHITECTURE, INSTALLATION & CONFIGURATION**
 
@@ -158,16 +37,30 @@ kubectl get deployment hp-webapp -n high-priority -o yaml | grep priorityClassNa
 
 ```bash
 ssh cluster1-controlplane
-helm ls -n default
-cd /root/
-helm lint ./new-version
-helm install --generate-name ./new-version --namespace default
-helm uninstall webpage-server-01 -n default
+kubectl -n beta-cka01-arch logs beta-pod-cka01-arch | grep ERROR > /root/beta-pod-cka01-arch_errors
+head /root/beta-pod-cka01-arch_errors
 ```
 
 ---
 
-## Q5. Fix Failed Deployment Under Resource Quota
+## Q9. Fix Service Accessibility
+
+**SECTION: SERVICES AND NETWORKING**
+
+**Cluster**: `cluster1-controlplane`
+
+### Solution:
+
+```bash
+ssh cluster1-controlplane
+kubectl exec curlpod-cka01-svcn -- curl curlme-cka01-svcn
+kubectl delete svc curlme-cka01-svcn
+kubectl expose pod curlme-cka01-svcn --port=80
+```
+
+---
+
+## Q10. Fix Secret and Env in WebApp
 
 **SECTION: WORKLOADS & SCHEDULING**
 
@@ -177,36 +70,67 @@ helm uninstall webpage-server-01 -n default
 
 ```bash
 ssh cluster3-controlplane
-kubectl get deployment backend-api
-kubectl describe pod <one-of-the-pods>
+kubectl create secret generic db-secret-wl05 -n canara-wl05 \
+--from-literal=DB_Host=mysql-svc-wl05 \
+--from-literal=DB_User=root \
+--from-literal=DB_Password=password123
 ```
 
-If you see errors like:
+Pod definition:
 
+```yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: webapp-pod-wl05
+  namespace: canara-wl05
+spec:
+  containers:
+    - name: webapp-pod-wl05
+      image: kodekloud/simple-webapp-mysql
+      envFrom:
+        - secretRef:
+            name: db-secret-wl05
 ```
-Error creating: pods ... is forbidden: exceeded quota: cpu-mem-quota, requested: requests.memory=128Mi, used: requests.memory=256Mi, limited: requests.memory=300Mi
-```
-
-You are **not allowed** to modify the resource limits or the quota.
-
-Fix it by **reducing replicas**:
 
 ```bash
-kubectl scale deployment backend-api --replicas=2
-```
-
-Then verify:
-
-```bash
-kubectl get pods
-kubectl get deployment backend-api
+kubectl replace -f <file> --force
+curl http://<NODE-IP>:<NODE-PORT>
 ```
 
 ---
 
-## Q6. Deploy Vertical Pod Autoscaler (VPA)
+## Q11. Fix Mount Error in Deployment
 
-**SECTION: WORKLOADS & SCHEDULING**
+**SECTION: TROUBLESHOOTING**
+
+**Cluster**: `cluster4-controlplane`
+
+### Solution:
+
+```bash
+ssh cluster4-controlplane
+kubectl edit -n cka4974 deployments.apps nginx-frontend
+```
+
+Update volumeMounts:
+
+```yaml
+volumeMounts:
+  - mountPath: /etc/nginx/conf.d/default.conf
+    name: nginx-conf-vol
+    subPath: default.conf
+```
+
+```bash
+kubectl exec -it -n cka4974 deployments/nginx-frontend -- curl -I http://localhost:81
+```
+
+---
+
+## Q12. Fix Ingress Host and Service
+
+**SECTION: TROUBLESHOOTING**
 
 **Cluster**: `cluster1-controlplane`
 
@@ -214,25 +138,132 @@ kubectl get deployment backend-api
 
 ```bash
 ssh cluster1-controlplane
+kubectl edit ingress nodeapp-ing-cka08-trb
 ```
 
-Apply VPA manifest:
+Update the following:
 
-```yaml
-apiVersion: autoscaling.k8s.io/v1
-kind: VerticalPodAutoscaler
-metadata:
-  name: analytics-vpa
-  namespace: cka24456
-spec:
-  targetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: analytics-deployment
-  updatePolicy:
-    updateMode: "Auto"
+- `host:` to `kodekloud-ingress.app`
+- `service.name:` to `nodeapp-svc-cka08-trb`
+- `port.number:` to `3000`
+
+```bash
+curl http://kodekloud-ingress.app
 ```
 
 ---
 
-(Additional questions Q7 to Q16 follow as originally formatted, unchanged.)
+## Q13. Add HTTPS Listener to Gateway
+
+**SECTION: SERVICES AND NETWORKING**
+
+**Cluster**: `cluster3-controlplane`
+
+### Solution:
+
+```yaml
+apiVersion: gateway.networking.k8s.io/v1
+kind: Gateway
+metadata:
+  name: web-gateway
+  namespace: cka5673
+spec:
+  gatewayClassName: kodekloud
+  listeners:
+    - name: https
+      protocol: HTTPS
+      port: 443
+      hostname: kodekloud.com
+      tls:
+        certificateRefs:
+          - name: kodekloud-tls
+```
+
+---
+
+## Q14. Route /api Traffic in HTTPRoute
+
+**SECTION: SERVICES AND NETWORKING**
+
+**Cluster**: `cluster3-controlplane`
+
+### Solution:
+
+```yaml
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: web-route
+  namespace: cka7395
+spec:
+  parentRefs:
+    - name: nginx-gateway
+      namespace: nginx-gateway
+  rules:
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /api
+      backendRefs:
+        - name: api-service
+          port: 8080
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /
+      backendRefs:
+        - name: web-service
+          port: 80
+```
+
+---
+
+## Q15. Create PVC for Existing PV
+
+**SECTION: STORAGE**
+
+**Cluster**: `cluster1-controlplane`
+
+### Solution:
+
+```yaml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: apple-pvc-cka04-str
+spec:
+  volumeName: apple-pv-cka04-str
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 40Mi
+```
+
+```bash
+kubectl apply -f <template-file-name>.yaml
+```
+
+---
+
+## Q16. Fix Broken Cluster Due to Missing Kubelet
+
+**SECTION: TROUBLESHOOTING**
+
+**Cluster**: `cluster2-controlplane`
+
+### Solution:
+
+```bash
+ssh cluster2-controlplane
+kubectl get nodes
+# ERROR: The connection to the server ... was refused
+crictl ps -a
+systemctl status kubelet
+# ERROR: kubelet not found
+kubeadm version  # e.g. v1.32.0
+sudo apt install -y kubelet=1.32.0-1.1
+sudo systemctl start kubelet
+kubectl get nodes
+```
