--- a/k8s-2.readme.md
+++ b/k8s-2.readme.md
@@ -4,6 +4,241 @@
 
 ## Q1. Create Storage Class, Persistent Volume, and Persistent Volume Claim
 
+**SECTION: STORAGE**
+
+**Cluster**: `cluster1-controlplane`
+
+### Task:
+
+- Create StorageClass `orange-stc-cka07-str`
+- Create PV `orange-pv-cka07-str` (150Mi, ReadWriteOnce, Retain, local path `/opt/orange-data-cka07-str`, node affinity to `cluster1-controlplane`)
+- Create PVC `orange-pvc-cka07-str` (128Mi, ReadWriteOnce)
+
+### Solution:
+
+SSH into the cluster1-controlplane host
+
+```bash
+ssh cluster1-controlplane
+```
+
+Create a yaml file as below:
+
+```yaml
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: orange-stc-cka07-str
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: orange-pv-cka07-str
+spec:
+  capacity:
+    storage: 150Mi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: orange-stc-cka07-str
+  local:
+    path: /opt/orange-data-cka07-str
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - cluster1-controlplane
+
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: orange-pvc-cka07-str
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: orange-stc-cka07-str
+  volumeName: orange-pv-cka07-str
+  resources:
+    requests:
+      storage: 128Mi
+```
+
+Apply the template:
+
+```bash
+kubectl apply -f <template-file-name>.yaml
+```
+
+---
+
+## Q2. Find Node with Highest CPU Usage
+
+**SECTION: CLUSTER ARCHITECTURE, INSTALLATION & CONFIGURATION**
+
+### Solution:
+
+Check CPU usage across all clusters:
+
+```bash
+ssh cluster1-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
+ssh cluster3-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
+ssh cluster4-controlplane "kubectl top node --no-headers | sort -nr -k2 | head -1"
+```
+
+Compare output:
+
+- cluster1-controlplane: 583m
+- cluster3-controlplane: 66m
+- cluster4-controlplane: 145m
+
+```bash
+echo cluster1,cluster1-controlplane > /opt/high_cpu_node
+```
+
+---
+
+## Q3. Create and Use PriorityClass
+
+**SECTION: WORKLOADS & SCHEDULING**
+
+**Cluster**: `cluster4-controlplane`
+
+### Solution:
+
+```bash
+ssh cluster4-controlplane
+```
+
+Create the PriorityClass:
+
+```yaml
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: high-priority
+value: 1000000
+globalDefault: false
+description: "This priority class is for high-priority applications."
+```
+
+Apply it, then edit the deployment:
+
+```bash
+kubectl edit deployment hp-webapp -n high-priority
+```
+
+Inside `spec.template.spec`, add:
+
+```yaml
+priorityClassName: high-priority
+```
+
+Verify:
+
+```bash
+kubectl get deployment hp-webapp -n high-priority -o yaml | grep priorityClassName
+```
+
+---
+
+## Q4. Upgrade Helm Chart
+
+**SECTION: CLUSTER ARCHITECTURE, INSTALLATION & CONFIGURATION**
+
+**Cluster**: `cluster1-controlplane`
+
+### Solution:
+
+```bash
+ssh cluster1-controlplane
+helm ls -n default
+cd /root/
+helm lint ./new-version
+helm install --generate-name ./new-version --namespace default
+helm uninstall webpage-server-01 -n default
+```
+
+---
+
+## Q5. Fix Failed Deployment Under Resource Quota
+
+**SECTION: WORKLOADS & SCHEDULING**
+
+**Cluster**: `cluster3-controlplane`
+
+### Solution:
+
+```bash
+ssh cluster3-controlplane
+kubectl get deployment backend-api
+kubectl describe pod <one-of-the-pods>
+```
+
+If you see errors like:
+
+```
+Error creating: pods ... is forbidden: exceeded quota: cpu-mem-quota, requested: requests.memory=128Mi, used: requests.memory=256Mi, limited: requests.memory=300Mi
+```
+
+You are **not allowed** to modify the resource limits or the quota.
+
+Fix it by **reducing replicas**:
+
+```bash
+kubectl scale deployment backend-api --replicas=2
+```
+
+Then verify:
+
+```bash
+kubectl get pods
+kubectl get deployment backend-api
+```
+
+---
+
+## Q6. Deploy Vertical Pod Autoscaler (VPA)
+
+**SECTION: WORKLOADS & SCHEDULING**
+
+**Cluster**: `cluster1-controlplane`
+
+### Solution:
+
+```bash
+ssh cluster1-controlplane
+```
+
+Apply VPA manifest:
+
+```yaml
+apiVersion: autoscaling.k8s.io/v1
+kind: VerticalPodAutoscaler
+metadata:
+  name: analytics-vpa
+  namespace: cka24456
+spec:
+  targetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: analytics-deployment
+  updatePolicy:
+    updateMode: "Auto"
+```
+
+# Kubernetes CKA Practice Questions and Solutions
+
+---
+
+## Q1. Create Storage Class, Persistent Volume, and Persistent Volume Claim
+
 ... _(existing content unchanged)_
 
 ---
